--- a/index.html
+++ b/index.html
@@ -427,7 +427,7 @@
   <section class="card" style="flex:0 0 auto;">
     <details>
       <summary style="cursor:pointer;font-weight:700;display:flex;align-items:center;gap:8px;color:var(--brand);font-size:13px">
-        <i class="fa fa-sliders"></i> Configuration & Import
+        <i class="fa fa-sliders"></i> Cliquez ici pour importer une liste
       </summary>
       <div class="toolbar">
         <button id="btn-generate-demo" class="btn" style="background:var(--warn); color:white">
